update projectTypeName & strings to boolean

--- a/app.json
+++ b/app.json
@@ -1,15 +1,16 @@
 {
-    "reponame": "phaser-tiled-map-spritesheet-sample",
+    "repoName": "sample-phaser-tiled-map-spritesheet",
     "title": "Phaser Tiled-map Spritesheet Sample",
     "tooltip": "A sample game based on Phaser to show the usage of Tiled-map",
     "description": "A sample game based on Phaser game engine to show the usage of Tiled-map",
     "articleUrl": "",
+    "projectTypeName" : "com.intel.xdk.projecttype.jsapp",
     "keywords": ["Phaser", "Game"],
-    "visible": "true",
+    "visible": true,
     "highlights": ["Phaser", "Game", "Texture Atlas"],
     "appname": "demo.phaserTiledmapSample",
     "abbr": "",
     "relname": "",
-    "apppreview": "true",
-    "mobile": "true"
+    "apppreview": true,
+    "mobile": true
 }
