--- a/app.json
+++ b/app.json
@@ -7,6 +7,7 @@
     "projectTypeName" : "com.intel.xdk.projecttype.jsapp",
     "keywords": ["Phaser", "Game"],
     "visible": true,
+    "landscape": true,
     "highlights": ["Phaser", "Game", "Texture Atlas"],
     "appname": "demo.phaserTiledmapSample",
     "abbr": "",
